Remove unless code and write some code

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,9 +18,9 @@ security:
                 entry_point: App\Security\OAuthGoogleAuthenticator
                 authenticators:
                     - App\Security\OAuthGoogleAuthenticator
-                    - App\Security\OAuthGithubAuthenticator
             logout:
                 path: logout
+                target: blog_posts
 
 
             # activate different ways to authenticate
