--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.30.0",
+        "@symfony/webpack-encore": "^0.32.0",
+        "bootstrap": "^4.5.3",
         "core-js": "^3.0.0",
+        "jquery": "^3.5.1",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
@@ -13,9 +15,5 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
-    "dependencies": {
-        "bootstrap": "^4.5.2",
-        "jquery": "^3.5.1",
-        "popper.js": "^1.16.1"
-    }
+    "dependencies": {}
 }
