--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
+        "symfony/debug-bundle": "^4.4",
         "symfony/dotenv": "4.4.*",
         "symfony/event-dispatcher": "4.4.*",
         "symfony/expression-language": "4.4.*",
@@ -41,7 +42,9 @@
         "symfony/translation": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
+        "symfony/var-dumper": "^4.4",
         "symfony/web-link": "4.4.*",
+        "symfony/web-profiler-bundle": "^4.4",
         "symfony/webpack-encore-bundle": "1.7.3",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -51,12 +54,9 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
-        "symfony/debug-bundle": "^4.4",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.1",
-        "symfony/var-dumper": "^4.4",
-        "symfony/web-server-bundle": "4.4.*",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
         "preferred-install": {
